tests/compile-fail/invalid-length.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
 --> $DIR/invalid-length.rs:6:23
  |
6 |     let _: [u32; 3] = concat_arrays!(x, y);
  |                       ^^^^^^^^^^^^^^^^^^^^
  |
  = note: source type: `main::ConcatArrays<[u8; 1], [u8; 1]>` (16 bits)
  = note: target type: `[u8; 3]` (24 bits)
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
 --> $DIR/invalid-length.rs:6:23
  |
6 |     let _: [u32; 3] = concat_arrays!(x, y);
  |                       ^^^^^^^^^^^^^^^^^^^^
  |
  = note: source type: `main::ConcatArrays<[u32; 1], [u32; 1]>` (64 bits)
  = note: target type: `[u32; 3]` (96 bits)
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
